--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
         "typescript": "^4.7.4"
     },
     "scripts": {
-        "test": "jest DFSOnBST LRU LinearSearchList BinarySearchList TwoCrystalBalls BubbleSort DoublyLinkedList Queue Stack ArrayList MazeSolver QuickSort BTPreOrder BTInOrder BTPostOrder BTBFS CompareBinaryTrees DFSOnBST DFSGraphList Trie BFSGraphMatrix Map MinHeap",
+        "test": "jest ArrayList BFSGraphMatrix BTBFS BTInOrder BTPostOrder BTPreOrder BinarySearchList BubbleSort CompareBinaryTrees DFSGraphList DFSOnBST DoublyLinkedList DijkstraList InsertionSort LRU LinearSearchList Map MazeSolver MergeSort MinHeap PrimsList Queue QuickSort SinglyLinkedList Stack Trie TwoCrystalBalls",
         "clear": "node ./scripts/clear.js",
         "prettier": "prettier --write ./src",
         "generate": "node ./scripts/generate.js",
-        "day": "echo src\\day2"
+        "day": "echo src/day1"
     }
 }
